# llm-backend

./: .dockerignore  .env.example  .gitignore  CHANGELOG_HITL_NL.md  CLAUDE.md  DOCKER_COMPOSE_REFERENCE.md  Dockerfile  Dockerfile-v2.bak  Procfile  README.md  README_HITL.md  TESTING_NL_HITL.md  add_session_columns.sql  app.json  docker-compose.local.yml  docker-compose.yml  pyproject.toml  start.sh  test_nl_hitl_request.py  test_nl_hitl_simple.sh
db/: 11-fix_run_id_type.sql  2-update_hitl_runs.sql  3-create_hitl_tables.sql  4-create_hitl_pending_approvals.sql  5-fix_pending_approvals_type.sql  6-add_message_to_hitl_step_events.sql  7-add_state_snapshot_column.sql  8-add_human_edits_column.sql  9-add_session_columns.sql  reset.sql
docs/: API_REFERENCE.md  ARCHITECTURE.md  BROWSER_HITL_INTEGRATION.md  CHAT_HISTORY_INTEGRATION.md  DATABASE_IMPLEMENTATION_SUMMARY.md  DATABASE_MIGRATION.md  DATABASE_TESTING.md  ERROR_RECOVERY_ANALYSIS.md  ERROR_RECOVERY_IMPLEMENTATION_PLAN.md  FORM_BASED_HITL.md  FRONTEND_INTEGRATION.md  HITL.md  HITL_IMPROVEMENT_PLAN.md  HITL_MESSAGE_FLOW.md  HITL_NATURAL_LANGUAGE_IMPLEMENTATION.md  HITL_ORCHESTRATOR.md  HITL_ORCHESTRATOR_OVERVIEW_FOR_V2.md  HITL_ORCHESTRATOR_V3_PLAN.md  HITL_SYSTEM_IMPROVEMENT_PLAN.md  MIGRATION_GUIDE.md  PROVIDER_INTERFACE.md  REDIS_POSTGRES_AND_WORKER_SETUP.md  TASK_QUEUE_RQ_IMPLEMENTATION.md  VALIDATION_MIGRATION.md  hitl-overview.md
scripts/: run_migrations.sh
src/: main.py  setup.py
tests/: conftest.py  run_hitl_tests.py  test_api_endpoints.py  test_attachment_mapping.py  test_hitl_agents_integration.py  test_hitl_core_functionality.py  test_hitl_database_integrity.py  test_hitl_edge_cases.py  test_hitl_flow.py  test_hitl_form_workflow.py  test_hitl_orchestrator.py  (+5 more)
(+61 files in other folders)
