[project]
name = "tohju-llm-backend"
version = "0.1.2"
description = ""
authors = [
    {name = "Tohju Dev",email = "michael@tohju.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "replicate (>=1.0.6,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "sentry-sdk[fastapi] (>=2.27.0,<3.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest (>=8.4.2,<9.0.0)"
]

[tool.poetry]
packages = [
    {include = "llm_backend", from = "src"},
    {include = "dynamic_mas", from = "src"}
]


[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
